<resources>
    <string name="app_name">Appointments Booking</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_back">Welcome back</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="register_here">Register here.</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="list_name">List Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="remember_me">Remember Me</string>
    <string name="country_name">Country Name</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="user_appointment">User Appointment</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="company_name">Company Name</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="appointment_description">Appointment Description</string>
    <string name="description_long">Description is too Long</string>
    <string name="description_short">Description is too Short</string>
    <string name="book_now">Book Now</string>
    <string name="more_details">More Details</string>
    <string name="map_api_key">AIzaSyABfoogtQnoWs-TvrxkC2oz1o8O5s3glXQ</string>


    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_campany">CampanyActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="cashing">Cashing</string>
    <string name="edit_profile">Edit Profile</string>

</resources>