<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3.5"
    tools:context=".Activities.LoginActivity">

    <include
        layout="@layout/my_tool_bar"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/person"
            app:startIconTint="@color/material_orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/material_orange"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/material_orange">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:inputType="textPassword"
                android:id="@+id/login_et_password"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/login_cb_remember_me"/>

        <TextView
            android:id="@+id/login_tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/login_ll_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/app_button_background_disabled"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:enabled="false"/>


    </LinearLayout>

</LinearLayout>