<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="7dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="3">
               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:src="@drawable/company"
                   android:scaleType="centerCrop"
                   />
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="15dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textColor="@color/white"
                     android:text="@string/company_name"
                     android:layout_gravity="start|center"
                     android:id="@+id/company_list_item_tv_company_name"/>


                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_gravity="end|center"
                     android:layout_margin="0dp"
                     >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:textColor="@color/white"
                         android:text="@string/country_name"
                         android:id="@+id/company_list_item_tv_country"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
                         android:textColor="@android:color/darker_gray"
                         android:layout_marginTop="5dp"
                         android:text="@string/city"
                         android:layout_gravity="center"

                         android:id="@+id/company_list_item_tv_city"/>
                 </LinearLayout>

             </FrameLayout>

           </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/company_list_item_tv_more"
                    android:text="@string/more_details"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:padding="10dp"
                    android:drawablePadding="5dp"
                    android:textSize="13sp"
                    android:layout_margin="5dp"
                    app:drawableStartCompat="@drawable/more" />


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:id="@+id/company_list_item_bt_book"
                    android:layout_gravity="end|center"
                    android:background="@drawable/outline_button_background"
                    android:text="@string/book_now"
                    android:textColor="@color/material_orange"
                    android:layout_margin="20dp"
                    android:textAllCaps="false"
                    android:elevation="3dp"/>




            </FrameLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>