<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/fragment_register_tow_sp_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.75"
                android:entries="@array/gender_list"
                android:padding="13dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/country_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/flag" />

            <Spinner
                android:id="@+id/fragment_register_tow_sp_countries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.75"
                android:padding="13dp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            android:hint="@string/city"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:startIconDrawable="@drawable/city"
            app:startIconTint="@color/material_orange">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/fragment_register_tow_et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:inputType="text"
                android:maxEms="15"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            android:hint="@string/street_address"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:startIconDrawable="@drawable/home"
            app:startIconTint="@color/material_orange">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/fragment_register_tow_et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:inputType="text"
                android:maxEms="25"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/material_orange">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/fragment_register_tow_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:inputType="textPassword"
                android:maxEms="25"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_register_tow_bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/app_button_background_disabled"
            android:enabled="false"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />


    </LinearLayout>

</ScrollView>